feat(#menu) : add handle menu and mockdata

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
       "@assets/*": ["src/assets/*"],
       "@libs/*": ["src/libs/i18n/*"],
       "@features/*": ["src/features/*"],
+      "@public/*": ["src/features/*"],
     },
     "forceConsistentCasingInFileNames": true,
   },
